--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,13 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "@seoul-awake/react-ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-seoul-awake": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
