--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "web",
-  "version": "1.0.0",
+  "name": "@seoul-awake/web",
   "private": true,
   "scripts": {
     "dev": "next dev",
