--- a/packages/react-ui/tsconfig.json
+++ b/packages/react-ui/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "tsconfig/react-library.json",
+  "compilerOptions": {
+    "declaration": true,
+    "outDir": "dist"
+  },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
