--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,36 +1,41 @@
 {
   "name": "@seoul-awake/docs",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --port 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@seoul-awake/react-ui": "workspace:*",
-    "next": "^13.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-jsx": "^5.1.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.0.22",
-    "@storybook/addon-interactions": "7.0.22",
-    "@storybook/addon-links": "7.0.22",
-    "@storybook/blocks": "7.0.22",
-    "@storybook/nextjs": "7.0.22",
-    "@storybook/react": "7.0.22",
-    "@storybook/testing-library": "0.0.14-next.2",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "eslint-config-seoul-awake": "workspace:*",
-    "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "7.0.22",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "@storybook/addon-essentials": "^7.0.23",
+    "@storybook/addon-interactions": "^7.0.23",
+    "@storybook/addon-links": "^7.0.23",
+    "@storybook/blocks": "^7.0.23",
+    "@storybook/cli": "^7.0.23",
+    "@storybook/react": "^7.0.23",
+    "@storybook/react-vite": "^7.0.23",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.23",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9",
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
