--- a/packages/react-ui/package.json
+++ b/packages/react-ui/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@seoul-awake/react-ui",
   "version": "0.0.0",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     },
     "./dist/index.css": "./dist/index.css"
   },
