--- a/turbo.json
+++ b/turbo.json
@@ -16,5 +16,10 @@
       "cache": false,
       "persistent": true
     }
-  }
+  },
+  "globalEnv": [
+    "NODE_ENV",
+    "NEXT_PUBLIC_API_MOCKING",
+    "NEXT_PUBLIC_KAKAO_JAVASCRIPT_KEY"
+  ]
 }
