--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,15 +1,12 @@
-name: Labeler
-
+name: "Pull Request Labeler"
 on:
   - pull_request_target
 
 jobs:
   triage:
-    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@main
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/labeler@v4
