--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/typescript-config",
+  "name": "@seoul-awake/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
