--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - uses: actions/labeler@v5.0.0
         with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
           sync-labels: true
