--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "@seoul-awake/web",
+  "name": "web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@seoul-awake/react-ui": "workspace:*",
-    "framer-motion": "^10.12.17",
-    "next": "^13.4.1",
+    "@fepack/image": "^0.2.6",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@seoul-awake/types": "workspace:*",
+    "@next/eslint-plugin-next": "^14.0.2",
+    "@seoul-awake/eslint-config": "workspace:*",
+    "@seoul-awake/typescript-config": "workspace:*",
+    "@types/eslint": "^8.44.7",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "eslint-config-seoul-awake": "workspace:*",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "eslint": "^8.53.0",
+    "typescript": "^5.2.2"
   }
 }
