--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
+  "name": "seoul-awake",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
-    "eslint-config-seoul-awake": "workspace:*",
-    "prettier": "^2.5.1",
+    "@seoul-awake/eslint-config": "workspace:*",
+    "@seoul-awake/typescript-config": "workspace:*",
+    "prettier": "^3.1.0",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0",
-  "name": "seoul-awake"
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
+  }
 }
