--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fepack/image": "^0.2.6",
+    "@stylexjs/open-props": "^0.4.1",
+    "@stylexjs/stylex": "^0.4.1",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,7 +20,11 @@
     "@next/eslint-plugin-next": "^14.0.2",
     "@seoul-awake/eslint-config": "workspace:*",
     "@seoul-awake/typescript-config": "workspace:*",
+    "@stylexjs/babel-plugin": "^0.4.1",
+    "@stylexjs/eslint-plugin": "^0.4.1",
+    "@stylexjs/nextjs-plugin": "^0.4.1",
     "@types/eslint": "^8.44.7",
+    "@types/navermaps": "^3.7.4",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
