feat: manage gradle properties

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# BE
+.idea
 
 # Dependencies
 node_modules
@@ -26,7 +27,6 @@ coverage
 out/
 build
 dist
-
 
 # Debug
 npm-debug.log*
