--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -6,3 +6,6 @@ javaVersion=17
 # spring
 springBootVersion=3.1.0
 springDependencyManagementVersion=1.1.0
+
+# check-style
+checkStyleVersion=10.12.2
