--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id 'checkstyle'
+    id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
+    id 'org.hidetake.swagger.generator' version "${swaggerGeneratorVersion}"
 }
 
 group = "${projectGroup}"
@@ -14,6 +16,7 @@ java.sourceCompatibility = "${javaVersion}"
 apply from: 'gradle/check-style.gradle'
 apply from: 'gradle/lombok.gradle'
 apply from: 'gradle/test-support.gradle'
+apply from: 'gradle/rest-docs.gradle'
 
 dependencies {
     // db
