--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -9,3 +9,7 @@ springDependencyManagementVersion=1.1.0
 
 # check-style
 checkStyleVersion=10.12.2
+
+# rest-docs
+restdocsApiSpecVersion=0.18.2
+swaggerGeneratorVersion=2.18.2
