--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,9 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-# yml
-!/src/main/resources/application.yml
-/src/main/resources/*.yml
+*.jqwik-database
 
 ### STS ###
 .apt_generated
