Chore: java App to kotlin App

--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -2,13 +2,11 @@
 projectGroup=seoulawake
 applicationVersion=0.0.1
 javaVersion=17
+kotlinVersion=1.9.22
 
 # spring
 springBootVersion=3.1.0
 springDependencyManagementVersion=1.1.0
-
-# check-style
-checkStyleVersion=10.12.2
 
 # rest-docs
 restdocsApiSpecVersion=0.18.2
