feat: map store

--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -14,7 +14,8 @@
     "@stylexjs/stylex": "^0.4.1",
     "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
