--- a/.github/workflows/server-integration-check.yml
+++ b/.github/workflows/server-integration-check.yml
@@ -1,11 +1,5 @@
 on:
-  pull_request:
-    paths:
-      - ./backend/**
-
-permissions:
-  checks: write
-  pull-requests: write
+  - pull_request
 
 env:
   GRADLE_VERSION: 8.3
@@ -16,6 +10,9 @@ env:
 jobs:
   check:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "/backend/**"
 
     steps:
       - name: Checkout Branch
@@ -28,11 +25,9 @@ jobs:
           distribution: ${{ env.JAVA_DISTRIBUTION }}
 
       - name: Setup Gradle w/ caching
-        uses: gradle/gradle-build-action@v2.9.0
+        uses: gradle/gradle-build-action@v3
         with:
           gradle-version: ${{ env.GRADLE_VERSION }}
 
       - name: Clean Build
-        uses: gradle/gradle-build-action@v2.9.0
-        with:
-          arguments: clean build
+        run: ./backend/gradle clean build
