--- a/.github/workflows/server-integration-check.yml
+++ b/.github/workflows/server-integration-check.yml
@@ -3,8 +3,8 @@ on:
 
 env:
   GRADLE_VERSION: 8.3
-  JAVA_VERSION: '17'
-  JAVA_DISTRIBUTION: 'temurin'
+  JAVA_VERSION: "17"
+  JAVA_DISTRIBUTION: "temurin"
   GRADLE_BUILD_ACTION_CACHE_DEBUG_ENABLED: true
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: "/backend/**"
+        working-directory: ./backend
 
     steps:
       - name: Checkout Branch
