fix(github): backend gradle path server integration check

--- a/.github/workflows/server-integration-check.yml
+++ b/.github/workflows/server-integration-check.yml
@@ -30,4 +30,4 @@ jobs:
           gradle-version: ${{ env.GRADLE_VERSION }}
 
       - name: Clean Build
-        run: ./backend/gradle clean build
+        run: ./gradle clean build
