--- a/.github/workflows/run-server.yml
+++ b/.github/workflows/run-server.yml
@@ -23,6 +23,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             docker pull ${{ secrets.DOCKER_IMAGE_TAG }}
-            docker ps -aq --filter name=${{ env.SERVER_NAME }} | xargs docker stop | xargs docker rm
+            docker ps -aq --filter name=${{ env.SERVER_NAME }} | xargs --no-run-if-empty docker stop | xargs --no-run-if-empty docker rm
             docker run --name ${{ env.SERVER_NAME }} --restart=always -dp 8080:8080 ${{ secrets.DOCKER_IMAGE_TAG }}
-            docker images -q --filter dangling=true | xargs docker rmi
+            docker images -q --filter dangling=true | xargs --no-run-if-empty docker rmi
