--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:test;MODE=MySQL;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:test;MODE=MySQL;
     driver-class-name: org.h2.Driver
     username: sa
     password:
